[package]
name = "storage-chain"
version = "4.0.0-dev"
description = "A fresh FRAME-based Substrate node, ready for hacking."
authors = { workspace = true }
homepage = "https://substrate.io/"
edition = "2021"
license = "Unlicense"
publish = false
repository = { workspace = true }
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "storage-chain"

[dependencies]
log = "0.4"
clap = { workspace = true, features = ["derive"] }
libsecp256k1 = { workspace = true, features = [ "hmac" ] }
sha3 = { workspace = true }
array-bytes = { version = "6.0.0" }
hex-literal = { version = "0.4.1" }
futures = { version = "0.3.25" }
tokio = { version = "1.25" }
async-trait = { version = "0.1" }
serde = { workspace = true }
codec = { workspace = true, package = "parity-scale-codec" }

sc-chain-spec = { workspace = true }
sc-cli = { workspace = true }
sc-tracing = { workspace = true }
sc-sysinfo = { workspace = true }
sp-core = { workspace = true, features = ["std"] }
sc-executor = { workspace = true }
sc-service = { workspace = true }
sc-telemetry = { workspace = true }
sc-keystore = { workspace = true }
sp-keystore = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sc-consensus-aura = { workspace = true }
sp-consensus-aura = { workspace = true, features = ["std"] }
sp-consensus = { workspace = true }
sc-consensus = { workspace = true }
sc-finality-grandpa = { workspace = true }
sp-finality-grandpa = { workspace = true }
sc-client-api = { workspace = true }
sp-runtime = { workspace = true, features = ["std"] }
sp-offchain = { workspace = true, features = ["std"] }
sp-session = { workspace = true, features = ["std"] }
sp-transaction-pool = { workspace = true, features = ["std"] }
sp-timestamp = { workspace = true, features = ["std"] }
sp-inherents = { workspace = true }
sp-keyring = { workspace = true }
frame-system = { workspace = true }
pallet-transaction-payment = { workspace = true }
substrate-prometheus-endpoint = { workspace = true }

# These dependencies are used for the node template's RPCs
jsonrpsee = { version = "0.16", features = [ "macros", "server" ] }
sc-rpc = { workspace = true }
sp-api = { workspace = true, features = ["std"] }
sc-rpc-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-block-builder = { workspace = true, features = ["std"] }
sc-basic-authorship = { workspace = true }
substrate-frame-rpc-system = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { workspace = true }
frame-benchmarking-cli = { workspace = true }

# Local Dependencies
storage-chain-runtime = { workspace = true }

# CLI-specific dependencies
try-runtime-cli = { optional = true, workspace = true }

# moonbeam
moonbeam-primitives-ext       = { workspace = true, optional = true, features = ["std"] }
moonbeam-rpc-debug = { workspace = true }
moonbeam-rpc-primitives-debug = { workspace = true }
moonbeam-rpc-trace = { workspace = true }

# polkadot
xcm = { workspace = true, features = ["std"]}
polkadot-cli = { workspace = true }
polkadot-primitives = { workspace = true }

# cumulus
cumulus-client-cli                    = { workspace = true }
cumulus-client-consensus-aura         = { workspace = true }
cumulus-client-consensus-common       = { workspace = true }
cumulus-client-network                = { workspace = true }
cumulus-client-service                = { workspace = true }
cumulus-primitives-core               = { workspace = true, features = ["std"] }
cumulus-primitives-parachain-inherent = { workspace = true, features = ["std"] }
cumulus-relay-chain-interface         = { workspace = true }

# Evm dependencies
fp-evm = { workspace = true, features = ["std"]}
fp-rpc = { workspace = true, features = ["std"] }
fp-storage = { workspace = true }
fp-dynamic-fee = { workspace = true }
fc-rpc = { workspace = true}
fc-cli = { workspace = true}
fc-consensus = { workspace = true }
fp-consensus = { workspace = true }
fc-rpc-core = { workspace = true }
fc-mapping-sync = { workspace = true }
fc-db = { workspace = true }
fc-storage = { workspace = true }
sc-network = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.38" }

[features]
default = []
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
	"storage-chain-runtime/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = ["storage-chain-runtime/try-runtime", "try-runtime-cli"]

#evm-tracing = [
#	# storage-chain
#	"storage-chain-runtime?/evm-tracing",
#
#	# moonbeam
#	"moonbeam-primitives-ext",
#]
